Update images references to be case sensitive

--- a/index.html
+++ b/index.html
@@ -126,35 +126,35 @@ body {
 		
 			<!-- Monks -->
 		
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(200px) translateX(-30px); "><img src="images/monk16.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(200px) translateX(-130px); "><img src="images/monk15.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(200px) translateX(-30px); "><img src="images/Monk16.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(200px) translateX(-130px); "><img src="images/Monk15.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(70px); "><img src="images/monk19.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(180px); "><img src="images/monk20.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(70px); "><img src="images/Monk19.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(180px); "><img src="images/Monk20.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(-220px); "><img src="images/monk7.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(-320px); "><img src="images/monk8.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(-220px); "><img src="images/Monk7.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(140px) translateX(-320px); "><img src="images/Monk8.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-71px) translateX(-45px); "><img src="images/monk17.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-70px) translateX(-120px); "><img src="images/monk18.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-71px) translateX(-45px); "><img src="images/Monk17.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-70px) translateX(-120px); "><img src="images/Monk18.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(30px); "><img src="images/monk5.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(140px); "><img src="images/monk6.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(30px); "><img src="images/Monk5.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(140px); "><img src="images/Monk6.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(-180px); "><img src="images/monk10.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(-280px); "><img src="images/monk9.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(-180px); "><img src="images/Monk10.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(20px) translateX(-280px); "><img src="images/Monk9.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-70px) translateX(285px); "><img src="images/monk13.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-71px) translateX(360px); "><img src="images/monk14.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-70px) translateX(285px); "><img src="images/Monk13.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-71px) translateX(360px); "><img src="images/Monk14.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-70px) translateX(-500px); "><img src="images/monk11.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-71px) translateX(-400px); "><img src="images/monk12.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-70px) translateX(-500px); "><img src="images/Monk11.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-71px) translateX(-400px); "><img src="images/Monk12.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(-420px); "><img src="images/monk1.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(-300px); "><img src="images/monk2.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(-420px); "><img src="images/Monk1.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(-300px); "><img src="images/Monk2.png" width="150px" height="150px"></div>
 
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(310px); "><img src="images/monk3.png" width="150px" height="150px"></div>
-			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(200px); "><img src="images/monk4.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(310px); "><img src="images/Monk3.png" width="150px" height="150px"></div>
+			<div id="1" class='monk' style="transform: translateY(150px) translateZ(-190px) translateX(200px); "><img src="images/Monk4.png" width="150px" height="150px"></div>
 		
 	</div><!-- Cube -->
 
