--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       height: 100%;
       font-family: "Josefin Sans", sans-serif;
       user-select: none;
+      --menu-height: 100px;
     }
 
     #menu {
       overflow: hidden;
       width: 100%;
-      height: 100px;
+      height: var(--menu-height);
       position: fixed;
       bottom: 0px;
       left: 0px;
@@ -40,20 +41,15 @@
     }
 
     #inner-menu {
-      /* overflow: hidden;
-      width: 100%;
-      height: 100px;
-      position: fixed;
-      bottom: 0px;
-      left: 0px;
-      color: #badfe7;
-      background-color: black; */
+      margin-left: 25px;
+      margin-right: 25px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       gap: 25px;
       width: 100vw;
       max-width: 1200px;
+      min-width: 950px;
     }
 
     .menu-block {
@@ -61,6 +57,33 @@
       align-items: center;
       justify-content: center;
       gap: 25px;
+    }
+
+    @media screen and (max-width: 950px) {
+      body {
+        --menu-height: 330px;
+      }
+
+      #inner-menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        width: 100vw;
+      }
+
+      .menu-block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+      }
+
+      button {
+        width: 160px;
+      }
     }
 
     button {
@@ -73,7 +96,7 @@
       font-family: sans-serif;
       font-size: 16px;
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
       gap: 5px;
     }
@@ -114,7 +137,9 @@
     #screen {
       overflow: hidden;
       width: 100%;
-      height: 100%;
+      height: calc(100% - var(--menu-height));
+      top: 0;
+      left: 0;
       background: rgb(252, 176, 69);
       background: radial-gradient(circle, rgba(252, 176, 69, 1) 0%, rgba(253, 29, 29, 1) 29%, rgba(0, 0, 0, 1) 60%);
       perspective: 700px;
@@ -248,7 +273,7 @@
   <div id="menu">
     <div id="inner-menu">
       <div class="menu-block">
-        <div class="menu-item" style="margin-left: 25px">
+        <div class="menu-item">
           <img src="images/dragonPearl.png" width="100px" />
         </div>
 
@@ -259,23 +284,24 @@
       </div>
       <div class="menu-block">
         <div class="menu-item">
-          <button>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-              <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-              <path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128z" />
-            </svg>
-            <span>Curriculum Vitae</span>
-          </button>
+          <a href="images/JoshuaVineyCV.pdf" download="JoshuaVineyCV.pdf">
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128z" />
+              </svg>
+              <span>Curriculum Vitae</span>
+            </button>
+          </a>
         </div>
-        <div class="menu-item">
+        <!--        <div class="menu-item">
           <button>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-              <path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V304H176c-35.3 0-64 28.7-64 64V512H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM176 352h32c30.9 0 56 25.1 56 56s-25.1 56-56 56H192v32c0 8.8-7.2 16-16 16s-16-7.2-16-16V448 368c0-8.8 7.2-16 16-16zm32 80c13.3 0 24-10.7 24-24s-10.7-24-24-24H192v48h16zm96-80h32c26.5 0 48 21.5 48 48v64c0 26.5-21.5 48-48 48H304c-8.8 0-16-7.2-16-16V368c0-8.8 7.2-16 16-16zm32 128c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H320v96h16zm80-112c0-8.8 7.2-16 16-16h48c8.8 0 16 7.2 16 16s-7.2 16-16 16H448v32h32c8.8 0 16 7.2 16 16s-7.2 16-16 16H448v48c0 8.8-7.2 16-16 16s-16-7.2-16-16V432 368z" />
+            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
+              <path d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM216 232V334.1l31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31V232c0-13.3 10.7-24 24-24s24 10.7 24 24z" />
             </svg>
             <span>CV</span>
           </button>
-        </div>
+        </div> -->
         <div class="menu-item">
           <a href="https://github.com/Mystagogue/puppet-master" target="_blank">
             <button>
@@ -298,7 +324,7 @@
             </button>
           </a>
         </div>
-        <div class="menu-item" style="margin-right: 25px">
+        <div class="menu-item">
           <button>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -315,6 +341,7 @@
 
   <script type="text/javascript">
     const cube = document.getElementById("cube");
+    const screen = document.getElementById("screen");
 
     let xVal = 25;
     let yVal = 25;
@@ -337,9 +364,9 @@
       cameraMove(window.innerWidth / 2, window.innerHeight / 2);
     };
 
-    document.addEventListener("mousemove", moveControl);
+    screen.addEventListener("mousemove", moveControl);
 
-    document.addEventListener("mouseleave", resetToCenter);
+    screen.addEventListener("mouseleave", resetToCenter);
 
     window.addEventListener("mouseout", resetToCenter);
   </script>
