--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
         <div class="content">
 					<div class="imageBlock" >
 						<img src="images/puppetMasterLogo.png" width="150"/>
-						<img src="images/puppetMasterApp.png" width="450"/>
+						<img src="images/PuppetMasterApp.png" width="450"/>
 					</div>
           <p>You can download my latest desktop app <a class="link" href="https://github.com/Mystagogue/puppet-master" target="_blank">"Puppet Master"</a> from Github. This app is built with Electron and React using Material-UI Components. It is a good showcase of my work in React.</p>
 					<p>Puppet Master combines browser automation with regular surfing! You can use the browser while automating it - and it makes doing that super easy! Perfect for manual testing, webscraping and power users.</p>
