change day to day

--- a/index.html
+++ b/index.html
@@ -680,9 +680,9 @@
             <h3>Appius</h2>
             <h3 style="color:#badfe7;">Dev Team Technical Analyst, Full-time</h3>
             <h4>Sep 2020 – Present</h4>
-            <p style="margin-bottom: 6px"><strong>Day to Day:</strong> Javascript, React, Node, GIT, SQL, AWS, npm, VS-Code, Data-Grip, PHPMyAdmin, Wordpress, Material-UI, Jira, Trello, Active Collab, Skype, Slack, Illustrator, Photoshop, Excel, Word.</p>
+            <p style="margin-bottom: 6px"><strong>Day to Day:</strong>Javascript, React, Node, C#, Visual Studio, .Net MVC, Puppeteer, IIS, SSMS, Episerver, Sitefinity, Sitecore</p>
 
-            <p style="margin-bottom: 4px">Front end, DB queries, General QA, Spec New Work, Project Management.</p>
+            <p style="margin-bottom: 4px">Front End, Specification, Debugging, Testing, Profiling</p>
           </div>
         </div>
       </details>
