--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         </div>
       </div>
 
-      <a href="images/JoshuaVineyCV.pdf" download="JoshuaVineyCV.pdf">
+      <a href="images/JoshuaViney-Resume.pdf" download="JoshuaVineyCV.pdf">
         <button>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -680,10 +680,7 @@
             <h3>Appius</h2>
             <h3 style="color:#badfe7;">Dev Team Technical Analyst, Full-time</h3>
             <h4>Sep 2020 – Present</h4>
-            <p style="margin-bottom: 6px"><strong>Day to Day:</strong>Javascript, React, Node, C#, Visual Studio, .Net MVC, Puppeteer, IIS, SSMS, Episerver, Sitefinity, Sitecore</p>
-
-            <p style="margin-bottom: 4px">Front End, Specification, Debugging, Testing, Profiling</p>
-          </div>
+            <p style="margin-bottom: 6px"><strong>Day to Day:</strong> Javascript, React and Node, frontend and build tooling. Requirements capture and specification of work. Acceptance testing and code review. Code profiling and optimisation. Automated testing and documentation.</p> </div>
         </div>
       </details>
     </div>
